--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,2 @@
+.row{background-color:#000}
 /* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
