--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -1,10 +1,12 @@
 @import "variables.less";
-//@import "mixins.less";
+@import "mixins.less";
 
 body {
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	overflow-x: hidden;
 }
+
+
 
 p {
 	font-size: 20px;
