--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -13,7 +13,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #18bc9c;
+  color: #26285b;
 }
 h1,
 h2,
@@ -45,25 +45,25 @@ hr.star-primary:after {
   padding: 0 0.25em;
 }
 hr.star-light {
-  border-color: white;
+  border-color: #16d1c9;
 }
 hr.star-light:after {
-  background-color: #18bc9c;
-  color: white;
+  background-color: #26285b;
+  color: #16d1c9;
 }
 hr.star-primary {
-  border-color: #2c3e50;
+  border-color: #ef7366;
 }
 hr.star-primary:after {
   background-color: white;
-  color: #2c3e50;
+  color: #ef7366;
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #18bc9c;
+  background: #26285b;
   color: white;
 }
 header .container {
@@ -85,6 +85,9 @@ header .intro-text .skills {
   font-size: 1.25em;
   font-weight: 300;
 }
+header .intro-text .skills + p {
+  font-size: 1.10em;
+}
 @media (min-width: 768px) {
   header .container {
     padding-top: 200px;
@@ -98,7 +101,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2c3e50;
+  background: #ef7366;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -120,7 +123,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18bc9c;
+  color: #26285b;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
@@ -128,13 +131,13 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18bc9c;
+  background: #26285b;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18bc9c;
+  background: #26285b;
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -144,9 +147,9 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18bc9c;
+  background-color: #26285b;
   color: white;
-  border-color: #18bc9c;
+  border-color: #26285b;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -176,7 +179,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18bc9c;
+  background: #26285b;
   color: white;
 }
 @media (max-width: 767px) {
@@ -198,7 +201,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: rgba(38, 40, 91, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -279,7 +282,7 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18bc9c;
+  color: #26285b;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -292,14 +295,14 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2c3e50;
+  background-color: #ef7366;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #233140;
+  background-color: #ed5e4f;
 }
 .btn-outline {
   color: white;
@@ -313,7 +316,7 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18bc9c;
+  color: #26285b;
   background: white;
   border: solid 2px white;
 }
@@ -384,7 +387,7 @@ footer .footer-below {
   height: 75px;
   width: 1px;
   margin-left: 35px;
-  background-color: #2c3e50;
+  background-color: #ef7366;
   transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   /* IE 9 */
@@ -397,7 +400,7 @@ footer .footer-below {
 .portfolio-modal .close-modal .lr .rl {
   height: 75px;
   width: 1px;
-  background-color: #2c3e50;
+  background-color: #ef7366;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   /* IE 9 */
@@ -428,7 +431,7 @@ footer .footer-below {
   position: absolute;
   left: 0px;
   top: 0px;
-  background: #18bc9c;
+  background: #26285b;
   outline: 0;
   transition: top 0.1s ease-in, background 0.5s linear;
 }
