--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -83,10 +83,13 @@ header .intro-text .name {
 }
 header .intro-text .skills {
   font-size: 1.25em;
-  font-weight: 300;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
-header .intro-text .skills + p {
+header .intro-text p {
   font-size: 1.10em;
+  margin-bottom: 5px;
 }
 @media (min-width: 768px) {
   header .container {
@@ -94,7 +97,7 @@ header .intro-text .skills + p {
     padding-bottom: 100px;
   }
   header .intro-text .name {
-    font-size: 4.75em;
+    font-size: 3.75em;
   }
   header .intro-text .skills {
     font-size: 1.75em;
@@ -150,6 +153,9 @@ header .intro-text .skills + p {
   background-color: #26285b;
   color: white;
   border-color: #26285b;
+}
+.top-buffer {
+  margin-top: 15px;
 }
 @media (min-width: 768px) {
   .navbar-custom {
