--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -96,11 +96,13 @@ header {
 		}
 		.skills {
 			font-size: 1.25em;
-			font-weight: 300;
-
-			+ p {
-				font-size:1.10em;
-			}
+			font-weight: 500;
+			text-transform: uppercase;
+			margin-bottom:10px;
+		}
+		p {
+			font-size:1.10em;
+			margin-bottom:5px;
 		}
 	}
 }
@@ -113,7 +115,7 @@ header {
 		}
 		.intro-text {
 			.name {
-				font-size: 4.75em;
+				font-size: 3.75em;
 			}
 			.skills {
 				font-size: 1.75em;
@@ -176,6 +178,10 @@ header {
 			border-color: @theme-success;
 		}
 	}
+}
+
+.top-buffer {
+	margin-top:15px;
 }
 
 @media(min-width:768px) {
