--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,4 @@
-.poo-variant(@color, @background, @border) {
+.button-variant(@color, @background, @border) {
 	color: @color;
 	background-color: @background;
 	border-color: @border;
