--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,7 @@
 @theme-primary:    #EF7366;
 // @theme-success:    #18BC9C;
 @theme-success:    #26285B;
+@theme-second: #090E24;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
