--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -91,10 +91,18 @@ header .intro-text p {
   font-size: 1.10em;
   margin-bottom: 5px;
 }
+.sidenote {
+  text-transform: uppercase;
+  color: #DC2681;
+  font-weight: 500;
+}
+#about {
+  background-color: #090e24;
+}
 @media (min-width: 768px) {
   header .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 60px;
   }
   header .intro-text .name {
     font-size: 3.75em;
