--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -6,8 +6,6 @@ body {
 	overflow-x: hidden;
 }
 
-
-
 p {
 	font-size: 20px;
 }
@@ -107,11 +105,22 @@ header {
 	}
 }
 
+// Font Classes
+.sidenote {
+	text-transform: uppercase;
+	color:#DC2681;
+	font-weight:500;
+}
+
+#about {
+	background-color:@theme-second;
+}
+
 @media(min-width:768px) {
 	header {
 		.container {
-			padding-top: 200px;
-			padding-bottom: 100px;
+			padding-top: 150px;
+			padding-bottom: 60px;
 		}
 		.intro-text {
 			.name {
